--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fiche Présentation - Ryann & Thibault</title>
     <!-- feuille CSS générale -->
-    <link rel="stylesheet" href="/public/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <!-- feuille CSS pour le header -->
-    <link rel="stylesheet" href="/public/CSS/header.css">
+    <link rel="stylesheet" href="/CSS/header.css">
     <!-- feuille CSS pour le footer -->
-    <link rel="stylesheet" href="/public/CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
     <!-- icone à coté du titre de la page -->
     <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
 </head>
@@ -54,13 +54,13 @@
         <section class="hobbiesBox">
 
             <!-- bouton pour la page musique.html -->
-            <a href="/public/pages/musique.html" class="boxLink">Musique</a>
+            <a href="/musique.html" class="boxLink">Musique</a>
             <!-- bouton pour la page films.html -->
-            <a href="/public/pages/films.html" class="boxLink">Séries</a>
+            <a href="/films.html" class="boxLink">Séries</a>
             <!-- bouton pour la page jeux.html -->
-            <a href="/public/pages/jeux.html" class="boxLink">Vidéos</a>
+            <a href="/jeux.html" class="boxLink">Vidéos</a>
             <!-- bouton pour la page plats.html -->
-            <a href="/public/pages/plats.html" class="boxLink">Plats</a>
+            <a href="/plats.html" class="boxLink">Plats</a>
         </section>
     </main>
 
