--- a/plats.html
+++ b/plats.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les Plats préférés de Ryann</title>
-    <link rel="stylesheet" href="/public/style.css">
-    <link rel="stylesheet" href="/public/CSS/header.css">
-    <link rel="stylesheet" href="/public/CSS/footer.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/header.css">
+    <link rel="stylesheet" href="/CSS/footer.css">
     <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
 </head>
 
