--- a/plats.html
+++ b/plats.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les Plats préférés de Ryann</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
+    <!-- feuille CSS générale -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- feuille CSS pour le header -->
+    <link rel="stylesheet" type="text/css" href="header.css">
+    <!-- feuille CSS pour le footer -->
+    <link rel="stylesheet" type="text/css" href="footer.css">
     <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
 </head>
 
