--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- feuille CSS pour le footer -->
     <link rel="stylesheet" type="text/css" href="footer.css">
     <!-- icone à coté du titre de la page -->
-    <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
+    <link rel="icon" href="assets/ico-site.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <!-- logo et bouton du site pour retourner à l'accueil -->
             <a href="index.html" class="logoLink">
                 <!-- image du logo -->
-                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
+                <img src="assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
@@ -34,7 +34,7 @@
         <!-- section principale avec la présentation + nom/prénom/âge -->
         <section class="fichePresentationRyann">
             <!-- photo de Ryann -->
-            <img class="photoRyannImage" src="/assets/image-ryann.png" alt="Photo de Ryann">
+            <img class="photoRyannImage" src="assets/image-ryann.png" alt="Photo de Ryann">
             <!-- nom + age de Ryann -->
             <div class="descriptionRyann">
                 <h2 class="titleName">Ryann RENÉ-CORAIL</h2>
@@ -54,13 +54,13 @@
         <section class="hobbiesBox">
 
             <!-- bouton pour la page musique.html -->
-            <a href="/musique.html" class="boxLink">Musique</a>
+            <a href="musique.html" class="boxLink">Musique</a>
             <!-- bouton pour la page films.html -->
-            <a href="/films.html" class="boxLink">Séries</a>
+            <a href="films.html" class="boxLink">Séries</a>
             <!-- bouton pour la page jeux.html -->
-            <a href="/jeux.html" class="boxLink">Vidéos</a>
+            <a href="jeux.html" class="boxLink">Vidéos</a>
             <!-- bouton pour la page plats.html -->
-            <a href="/plats.html" class="boxLink">Plats</a>
+            <a href="plats.html" class="boxLink">Plats</a>
         </section>
     </main>
 
