--- a/jeux.html
+++ b/jeux.html
@@ -5,17 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Les Jeux Vidéos préférés de Ryann</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
+    <!-- feuille CSS générale -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- feuille CSS pour le header -->
+    <link rel="stylesheet" type="text/css" href="header.css">
+    <!-- feuille CSS pour le footer -->
+    <link rel="stylesheet" type="text/css" href="footer.css">
+    <link rel="icon" href="assets/ico-site.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html" class="logoLink">
-                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
+            <a href="index.html" class="logoLink">
+                <img src="assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
@@ -27,7 +30,7 @@
                 <h3>Apex Legends</h3>
             </a>
             <a href="https://www.ea.com/games/apex-legends/apex-legends" class="linkJeuxImage">
-                <img src="/assets/photo-ApexLegends.jpg" alt="photo du jeu Apex Legends">
+                <img src="assets/photo-ApexLegends.jpg" alt="photo du jeu Apex Legends">
             </a>
         </div>
 
@@ -36,13 +39,13 @@
                 <h3>NBA 2K</h3>
             </a>
             <a href="https://nba.2k.com/" class="linkJeuxImage">
-                <img src="/assets/photo-NBA2K.jpg" alt="photo du jeu NBA 2K">
+                <img src="assets/photo-NBA2K.jpg" alt="photo du jeu NBA 2K">
             </a>
         </div>
     </div>
 
     <div class="buttonBackHome">
-        <a href="/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
+        <a href="index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
     </div>
 
     <footer>
