--- a/musique.html
+++ b/musique.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html" class="logoLink">
-                <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
+            <a href="index.html" class="logoLink">
+                <img src="assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
     </header>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="buttonBackHome">
-        <a href="/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
+        <a href="index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
     </div>
 
     <footer>
