--- a/plats.html
+++ b/plats.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" type="text/css" href="header.css">
     <!-- feuille CSS pour le footer -->
     <link rel="stylesheet" type="text/css" href="footer.css">
-    <link rel="icon" href="/assets/ico-site.ico" type="image/x-icon">
+    <link rel="icon" href="assets/ico-site.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <a href="/index.html" class="logoLink">
+            <a href="index.html" class="logoLink">
                 <img src="/assets/logo.jpg" alt="Logo de la page" width="100" height="100">
             </a>
         </div>
@@ -31,7 +31,7 @@
             </a>
             <a href="https://www.afrocuisinemagazine.com/post/recette-du-jour-riz-jollof-nigerian"
                 class="linkPlatsImage" target="_blank">
-                <img src="/assets/photo-riz-joffol.png" alt="photo du plat Riz Jollof Nigérian">
+                <img src="assets/photo-riz-joffol.png" alt="photo du plat Riz Jollof Nigérian">
             </a>
         </div>
 
@@ -42,13 +42,13 @@
             </a>
             <a href="https://www.afrocuisinemagazine.com/post/recette-du-jour-riz-jollof-nigerian"
                 class="linkPlatsImage" target="_blank">
-                <img src="/assets/photo-cabilleau.jpeg" alt="photo du plat Dos de cabillaud aux épinards">
+                <img src="assets/photo-cabilleau.jpeg" alt="photo du plat Dos de cabillaud aux épinards">
             </a>
         </div>
     </div>
 
     <div class="buttonBackHome">
-        <a href="/index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
+        <a href="index.html" class="buttonBackHomeLink">Retour à l'accueil</a>
     </div>
 
     <footer>
